--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=ERROR, stdout
 # MyBatis logging configuration...
 #log4j.logger.org.mybatis.example.BlogMapper=TRACE
 
-log4j.logger.com.oldlec.web.dao.UserDao=TRACE
+log4j.logger.com.oldlec.web.dao.ArticleDao=TRACE
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
