--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,6 +4,8 @@ log4j.rootLogger=ERROR, stdout
 #log4j.logger.org.mybatis.example.BlogMapper=TRACE
 
 log4j.logger.com.oldlec.web.dao.ArticleDao=TRACE
+log4j.logger.com.oldlec.web.dao.CommentDao=TRACE
+
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
