--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=ERROR, stdout
 
 log4j.logger.com.oldlec.web.dao.ArticleDao=TRACE
 log4j.logger.com.oldlec.web.dao.CommentDao=TRACE
-
+log4j.logger.com.oldlec.web.dao.UserDao=TRACE
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
